# TurboFNO

./: .gitmodules  NOTICE  README.md  analyze_nsys_results_simple_1d.py  benchmark_nsys_1d.py  benchmark_nsys_2d.py  convert.py  envpath.sh  install.sh  install_benchmark_optimized.sh  kernel_analysis_1d.py  kernel_analysis_2d.py  nsys_kernel_analysis_1d.csv  nsys_kernel_analysis_2d.csv  output.py  plot.ipynb  plot_2D copy.ipynb  plot_2D.ipynb  schrodinger.ipynb  simple_kernel_breakdown_1d.py  simple_kernel_breakdown_2d.py  test.ipynb  test.py  test_2D.ipynb
1D_A_exp_fft+cgemm+ifft/: fused.cu
1D_B_exp_fused_fft_cgemm+ifft/: fused_fft_cgemm_10.cuh  fused_fft_cgemm_7.cuh  fused_fft_cgemm_9.cuh
1D_C_exp_fft+fused_cgemm_ifft/: fused_cgemm_ifft_7.cuh  fused_cgemm_ifft_8.cuh  fused_cgemm_ifft_9.cuh
1D_D_exp_fused_fft_cgemm_ifft/: fused_fft_cgemm_ifft_10.cuh  fused_fft_cgemm_ifft_8.cuh
2D_A_exp_fft+cgemm+ifft/: CMakeLists.txt  fused_fft_cgemm_ifft_trunc_2D.cuh  fused_trunc_2D.cu  turboFNO.h
2D_B_exp_fused_fft_cgemm+ifft/: fused_fft_cgemm_8.cuh
2D_D_exp_fused_fft_cgemm_ifft/: fused_fft_cgemm_ifft_trunc_2D_10.cuh  fused_fft_cgemm_ifft_trunc_2D_8.cuh  fused_fft_cgemm_ifft_trunc_2D_9.cuh  fused_trunc_2D.cu
FFT_CONV/: fft_conv.ipynb
benchmark_config/: problem_size_1d.txt  problem_size_2d.txt
cgemm/: CMakeLists.txt  cgemm.cuh  main.cu  makefile  test_cutlass.cu  zgemm
cgemm/include/cutlass/gemm/threadblock/: mma_multistage.h
cgemm/utils/: utils.cu
cgemm_cutlass/: CMakeLists.txt  cgemm.cuh  input.txt  test.py  test_cutlass.cu
cgemm_cutlass/include/cutlass/gemm/threadblock/: mma_pipelined.h
cgemm_cutlass/include/cutlass/gemm/warp/: mma_tensor_op.h
cgemm_cutlass/include_bk/cutlass/gemm/threadblock/: mma_pipelined.h
cgemm_cutlass/include_bk/cutlass/gemm/warp/: mma_tensor_op_fast_f32.h
cgemm_cutlass/utils/: utils.cuh
cmake/: turbofno_targets.cmake
exp_data/: 1D_A  1D_B  1D_C  1D_D  1D_E  2D_A  2D_B  2D_C  2D_D  2D_E
exp_data_1/: 1D_B  1D_C  1D_D  1D_E
exp_fft+fused_cgemm_ifft/: turboFNO.h
exp_fused_fft_cgemm+ifft/: fused.cu
fft/: fft.cuh  main.cu  test.cu
fused_fft_cgemm/: CMakeLists.txt  fft_7 copy.cuh  fft_7.cuh  fused.cu  fused_fft_cgemm.cuh  main.cu  test.cu
fused_fft_cgemm_ifft/: CMakeLists.txt  fused.cu  fused_fft_cgemm.cuh  fused_fft_cgemm_ifft.cuh  fused_fft_cgemm_ifft_trunc.cuh  fused_trunc.cu
fused_fft_cgemm_ifft_trunc/: CMakeLists.txt  fused_trunc.cu
fused_fft_cgemm_ifft_trunc_2D/: fused_trunc_2D.cu
fusion_variants/1D_A_exp_fft+cgemm+ifft/: CMakeLists.txt  cgemm.cuh  fused.cu
fusion_variants/2D_A_exp_fft+cgemm+ifft/: CMakeLists.txt  fused_trunc_2D.cu
fusion_variants/2D_B_exp_fused_fft_cgemm+ifft/: CMakeLists.txt  fused_trunc_2D.cu
fusion_variants_benchmark/2D_A_exp_fft+cgemm+ifft/: CMakeLists.txt  fused_trunc_2D.cu
fusion_variants_benchmark_optimized/1D_A_exp_fft+cgemm+ifft/: CMakeLists.txt  cgemm.cuh  fused.cu
hip_compat/: cublas_v2.h  cuda_runtime.h  cuda_to_hip.h  cufft.h  cufftXt.h  helper_cuda.h  helper_functions.h  mma.h
nsys_stats_1d/: TurboFNO_1D_A_bs32_dx128_dy128_n128_k128.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k16.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k256.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k32.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k512.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k64.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k128.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k16.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k256.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k32.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k512.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k64.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k128.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k16.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k256.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k32.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k512.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k64.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k128.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k16.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k256.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k32.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k512.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k64.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k128.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k16.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k256.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k32.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k512.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k64.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k128.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k16.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k256.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k32.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k512.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k64.txt  TurboFNO_1D_A_bs32_dx256_dy256_n128_k128.txt  TurboFNO_1D_A_bs32_dx256_dy256_n128_k16.txt  TurboFNO_1D_A_bs32_dx256_dy256_n128_k256.txt  TurboFNO_1D_A_bs32_dx256_dy256_n128_k32.txt  (+430 more)
nsys_stats_1d_bk/: TurboFNO_1D_A_bs32_dx128_dy128_n128_k128.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k16.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k32.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k64.txt  TurboFNO_1D_A_bs32_dx128_dy128_n128_k8.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k128.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k16.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k32.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k64.txt  TurboFNO_1D_A_bs32_dx128_dy128_n64_k8.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k128.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k16.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k32.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k64.txt  TurboFNO_1D_A_bs32_dx128_dy256_n128_k8.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k128.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k16.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k32.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k64.txt  TurboFNO_1D_A_bs32_dx128_dy256_n64_k8.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k128.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k16.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k32.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k64.txt  TurboFNO_1D_A_bs32_dx256_dy128_n128_k8.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k128.txt  TurboFNO_1D_A_bs32_dx256_dy128_n64_k16.txt  (+272 more)
(+1967 files in other folders)
